src/sass/formio.form.scss
/* ... */
@keyframes formio-dialog-flyin {
  0% {
    opacity: 0;
    -webkit-transform: translateY(-40px);
    transform: translateY(-40px);
  }

  100% {
    opacity: 1;
    -webkit-transform: translateY(0);
    transform: translateY(0);
  }
}

@-webkit-keyframes formio-dialog-flyout {
  0% {
    opacity: 1;
    -webkit-transform: translateY(0);
    transform: translateY(0);
  }

  100% {
    opacity: 0;
    -webkit-transform: translateY(-40px);
    transform: translateY(-40px);
  }
}

@keyframes formio-dialog-flyout {
  0% {
    opacity: 1;
    -webkit-transform: translateY(0);
    transform: translateY(0);
  }

  100% {
    opacity: 0;
    -webkit-transform: translateY(-40px);
    transform: translateY(-40px);
  }
}

.formio-dialog.formio-dialog-theme-default {
  padding-bottom: 160px;
  padding-top: 160px;

  .component-edit-container {
    padding: 0.5em;
  }
}

.formio-dialog.formio-dialog-theme-default.formio-dialog-closing .formio-dialog-content {
  -webkit-animation: formio-dialog-flyout .5s;
  animation: formio-dialog-flyout .5s;
}

.formio-dialog.formio-dialog-theme-default .formio-dialog-content {
  -webkit-animation: formio-dialog-flyin .5s;
  animation: formio-dialog-flyin .5s;
  background: #f0f0f0;
  border-radius: 5px;
  font-family: 'Helvetica',sans-serif;
  font-size: 1.1em;
  line-height: 1.5em;
  margin: 0 auto;
  max-width: 100%;
  padding: 1em;
  position: relative;
  width: 80%;
}

.formio-dialog.formio-dialog-theme-default .formio-dialog-close {
  border: none;
  background: transparent;
  cursor: pointer;
  position: absolute;
  right: 1px;
  top: 1px;
  z-index: 100;
}

.formio-clickable {
  cursor: pointer;
}

.component-settings .nav>li>a {
  padding: 8px 10px;
}

.formio-dialog.formio-dialog-theme-default .formio-dialog-close:before {
  display: block;
  padding: 3px;
  background: transparent;
  color: #8a8a8a;
  content: '×';
  font-size: 26px;
  font-weight: 400;
  line-height: 26px;
  text-align: center;
}

.formio-dialog.formio-dialog-theme-default .formio-dialog-close:hover:before,
.formio-dialog.formio-dialog-theme-default .formio-dialog-close:active:before {
  color: #777;
}

.formio-dialog.formio-dialog-theme-default .formio-dialog-message {
  margin-bottom: .5em;
}

.formio-dialog.formio-dialog-theme-default .formio-dialog-input {
  margin-bottom: 1em;
}

.formio-dialog.formio-dialog-theme-default .formio-dialog-input textarea,
.formio-dialog.formio-dialog-theme-default .formio-dialog-input input[type="text"],
.formio-dialog.formio-dialog-theme-default .formio-dialog-input input[type="password"],
.formio-dialog.formio-dialog-theme-default .formio-dialog-input input[type="email"],
.formio-dialog.formio-dialog-theme-default .formio-dialog-input input[type="url"] {
  background: #fff;
  border: 0;
  border-radius: 3px;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  margin: 0 0 .25em;
  min-height: 2.5em;
  padding: .25em .67em;
  width: 100%;
}

.formio-dialog.formio-dialog-theme-default .formio-dialog-input textarea:focus,
.formio-dialog.formio-dialog-theme-default .formio-dialog-input input[type="text"]:focus,
.formio-dialog.formio-dialog-theme-default .formio-dialog-input input[type="password"]:focus,
.formio-dialog.formio-dialog-theme-default .formio-dialog-input input[type="email"]:focus,
.formio-dialog.formio-dialog-theme-default .formio-dialog-input input[type="url"]:focus {
  box-shadow: inset 0 0 0 2px #8dbdf1;
  outline: none;
}

.formio-dialog.formio-dialog-theme-default .formio-dialog-buttons {
  *zoom: 1;
}

.formio-dialog.formio-dialog-theme-default .formio-dialog-buttons:after {
  content: '';
  display: table;
  clear: both;
}

.formio-dialog.formio-dialog-theme-default .formio-dialog-button {
  border: 0;
  border-radius: 3px;
  cursor: pointer;
  float: right;
  font-family: inherit;
  font-size: .8em;
  letter-spacing: .1em;
  line-height: 1em;
  margin: 0 0 0 .5em;
  padding: .75em 2em;
  text-transform: uppercase;
}

.formio-dialog.formio-dialog-theme-default .formio-dialog-button:focus {
  -webkit-animation: formio-dialog-pulse 1.1s infinite;
  animation: formio-dialog-pulse 1.1s infinite;
  outline: none;
}

@media (max-width: 568px) {
  .formio-dialog.formio-dialog-theme-default .formio-dialog-button:focus {
    -webkit-animation: none;
    animation: none;
  }
}

.formio-dialog.formio-dialog-theme-default .formio-dialog-button.formio-dialog-button-primary {
  background: #3288e6;
  color: #fff;
}

.formio-dialog.formio-dialog-theme-default .formio-dialog-button.formio-dialog-button-secondary {
  background: #e0e0e0;
  color: #777;
}

.formio-dialog-content .panel {
  margin: 0;
}

.formio-dialog-content [ref="dialogHeader"] {
  padding-right: 15px;
}

.formio-placeholder {
  position:absolute;
  color: #999;
}

.formio-dialog .formio-dialog-close {
  cursor: pointer;
}

.formio-iframe {
  border: none;
  width: 100%;
  height: 1000px;
}

.inline-form-button {
  margin-right: 10px;
}

.tooltip {
  opacity: 1;
}

.tooltip[x-placement="right"] .tooltip-arrow {
  border-right: 5px solid black;
}

.tooltip[x-placement="right"] .tooltip-inner {
  margin-left: 8px;
}

.control-label--bottom {
  margin-bottom: 0;
  margin-top: 5px;
}

.formio-component-label-hidden {
  position: relative;
}

.formio-hidden {
  margin: 0;
}

.control-label--hidden {
  position: absolute;
  top: 6px;
  right: 5px;
  font-size: 1.5em;
}

.formio-component-datetime .control-label--hidden.field-required {
  right: 45px;
  z-index: 3;
}

.formio-component-survey .control-label--hidden.field-required,
.formio-component-selectboxes .control-label--hidden.field-required {
  top: 0;
}

.formio-component-resource .control-label--hidden.field-required,
.formio-component-select .control-label--hidden.field-required {
  right: 40px;
  z-index: 2;
}

/* Fix for Hidden checkbox in component editform. */
.formio-component-hidden:not(.formio-component-checkbox),
.formio-component-datasource {
  margin-bottom: 0;
}
/* ... */

